Stop text overflow for long location names

--- a/client/stylesheets/modules/list_of_lists.less
+++ b/client/stylesheets/modules/list_of_lists.less
@@ -102,6 +102,8 @@
           font-family:HN-B;
           text-align: left;
           color:@black;
+          height: 50px;
+          overflow: hidden;
         }
       }
       &-compbox{
